# measure_home_env_fs

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  cmd.txt
src/: main.rs
