[package]
name = "measure_home_env_fs"
version = "0.2.0"
authors = ["Masayuki Sunahara <tamanishi@gmail.com>"]
edition = "2018"

[dependencies]
bme280 = "0.2.1"
linux-embedded-hal = "0.3.0"
google-firestore1_beta1 = "1.0.8+20181001"
hyper = "^0.10"
hyper-native-tls = "0.3"
yup-oauth2 = "^1.0"
chrono = "0.4.19"
clap = "2.33.3"

